--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "product:seed": "node ./src/utils/seeder.js"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.0.18",
     "@hookform/resolvers": "^3.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.4",
     "@tanstack/react-query": "^4.32.6",
     "autoprefixer": "10.4.14",
@@ -35,6 +37,9 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.1.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "use-debounce": "^9.0.4",
     "validator": "^13.11.0",
